# beppe

./: Editor  Editor.dsp  INSTALL.txt  LICENSE.txt  README.md
docs/: Descrizione dei menu.doc  editor.doc
include/fox/: FX4Splitter.h  FXAccelTable.h  FXApp.h  FXArray.h  FXArrowButton.h  FXBMPIcon.h  FXBMPImage.h  FXBitmap.h  FXButton.h  FXCURCursor.h  FXCanvas.h  FXCharset.h  FXCheckButton.h  FXColorBar.h  FXColorDialog.h  FXColorSelector.h  FXColorWell.h  FXColorWheel.h  FXComboBox.h  FXComposite.h  FXCursor.h  FXDC.h  FXDCPrint.h  FXDCWindow.h  FXDHMat.h  FXDHVec.h  FXDQuat.h  FXDVec.h  FXDataTarget.h  FXDebugTarget.h  FXDelegator.h  FXDial.h  FXDialogBox.h  FXDict.h  FXDirBox.h  FXDirDialog.h  FXDirList.h  FXDirSelector.h  FXDocument.h  FXDragCorner.h  (+138 more)
include/ftgl/: FTGL.h
lib/linux/: libFOX.la  libFOX.lai  libfreetype.la
lib/win32/: fox.lib  freetype206MT.lib  ftgl.lib
samples/: EF2000.bzp  Nabucodonosor.bzp  NabucodonosorMare.bzp  coke2.bzp  coke3.bzp  coso.bzp  tie2.bzp  tubo.bzp
samples/texture/: AlaBordo.tga  AlaCentro.tga  AlaSup.tga  Palla.tga  arfont.tga  star.tga  tex.tga
src/: AboutWindow.cpp  AboutWindow.h  Bezier.cpp  Bezier.h  Camera.cpp  Camera.h  Editor.cpp  Editor.h  EditorBezierPatch.cpp  EditorBezierPatch.h  FogInfo.cpp  FogInfo.h  FogMgr.cpp  FogMgr.h  Icons.h  Image.cpp  Image.h  ImageTGA.cpp  ImageTGA.h  LogWindow.cpp  LogWindow.h  Logger.cpp  Logger.h  Makefile  MatWindow.cpp  MatWindow.h  MaterialInfo.cpp  MaterialInfo.h  MaterialMgr.cpp  MaterialMgr.h  Mtxlib.cpp  Mtxlib.h  PatchMgr.cpp  PatchMgr.h  Picker.cpp  Picker.h  RenderedBezier.cpp  RenderedBezier.h  TexCached.cpp  TexCached.h  (+17 more)
